# MASSIVEChem

./: .gitignore  Benzene Shifting.py  LICENSE.txt  MASSIVEChem.yml  Project_ppchem.yml  README.md  bokeh_with_plotly.html  callback.html  encoded_image.py  ethanol.xyz  insaturation.py  molecule.html  plotly_bokeh_layout.html  ppchemproject.yml  preliminary.py  project_CH200.yml  pyproject.toml  setup.py  subgroups.py  temp-plot.html  test.py  tests.py
.github/workflows/: requirements.txt
Bokeh/: BOKEH_try.html  BOKEH_try.py  Bokeh try.py  Double plot bokeh.html  Double plot bokeh.py  Functional groups SMILES  Functional_group_display.html  Functional_group_display.py  Functional_group_finder.py  Mass spectro display.html  Mass spectro display.py  Mol_display.html  Mol_display.py  Mol_info.py  callback.html  delete.py  interactive_gaussian_plot.html  layout.html  layout.py  new_file.py  text.txt
Cheminterface/: Tkinter_interface.py
Mass Spectrometry/: Mass_spectrometry.py  Natural_abundance.txt  interactive_gaussian_plot.html
Molecular symmetry/: Molecular_point_group  NMR library.py  Point_group2.py  Point_groups.py
NMR library/: Benzene Shifting.py  Benzene_shifting.txt  Funct_groups_shift.txt  NMR library.py
THOMAS_IS_BEST/: COPIED_VERSION.html  COPIED_VERSION.py  Mol_display.html  Mol_display.py  Preliminary_v2.py  big_func.html  big_func.py  conversion.py  copy_file.py  functional_group_display.py  functional_group_finder.py  functions.html  functions.py  functunal_groups.py  last.py  mol_web_show_copy.html  mol_web_show_old.py  names.txt  test.py  test2.py  test_image  test_image.html  test_image.py
THOMAS_IS_BEST/__pycache__/: test3.py
THOMAS_IS_BEST/igor_chem/: mol_3d.html  mol_3d.py  mol_web_show_copy.py  smiles_to_3D_plot.html  smiles_to_3D_plot.py  spectrum_copy.html  spectrum_copy.py
Thomas/: Copy_spectrometer.py  Dont_touch_arthur.py  Dont_touch_igor.py  Dont_touch_thomas.py  Igor.py  Preliminary.py  Preliminary_v2.py  Thomas_return.html  Thomas_return.py  Thomas_return_pyplot.html  Thomas_return_pyplot.py  abundance.txt  abundance_simplified.txt  functions.html  functions.py  new.py  random.py  random_tests.py  test3.py  testigor.py  tests.py  tests2.py
notebooks/: backup.py  project_report.ipynb
scripts/: SMILEs_interpreter.py  all_in_one.py  atom_present_list.py  button_display.py  calculate_unsaturation.py  data.py  data_list_generator.py  delete_mol_image_file.py  delta_function_plotter.py  double_plot.py  empty_file_path.py  functional_group_display.html  functional_group_display.py  functional_group_finder.py  functional_list_display.html  functional_list_display.py  insaturation.py  main_function.py  mol_web_show.html  mol_web_show.py  molecule_list_generator.py  peak_merger.py  peak_sorter.py  save_molecule_image_to_file.py  smiles_to_3D_plot.py  spectrum.html  spectrum.py  spectrum_3D.py  sulphur_nitrogen_adder.py  sulphur_nitrogen_finder.py  unsaturation_display.html  unsaturation_display.py
src/ChemInterface/: ChemInterface.py
src/MASSiveChem/: MASSiveChem.py  test.py
test/: test_MASSIVEChem.py  test_SMILEs_interpreter.py  test_calculate_unsaturation.py  test_delta_function_plotter.py  test_double_plot.py  test_functional_group_display.py  test_functional_group_finder.py  test_ionisation_method.py  test_main_function.py  test_mol_web_show.py  test_molecule_list_generator.py  test_peak_merger.py  test_peak_sorter.py  test_smiles_to_3D_plot.py  test_spectrum.py  test_spectrum_3D.py  test_sulphur_nitrogen_adder.py  test_sulphur_nitrogen_finder.py
tests/: test.py
tests/tests/: SMILEs_interpreter_tests.py  all_in_one_tests.py  atom_present_list_tests.py  delta_function_plotter_tests.py  double_plot_tests.py  functional_group_display_tests.html  functional_group_display_tests.py  functional_group_finder_tests.py  ionisation_method_tests.py  main_function_tests.py  mol_web_show_tests.py  molecule_list_generator_tests.py  peak_merger_tests.py  peak_sorter_tests.py  smiles_to_3D_plot_tests.py  sulphur_nitrogen_adder_tests.py  test_SMILEs_interpreter.py  test_delta_function_plotter.py  test_functional_group_display.py  test_main_function.py  (+7 more)
(+1 files in other folders)
