[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MASSiveChem"
version = "2.5"
description = "..."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["unsaturation", "Mass spectroscopy"]
authors = [
  { name = "Thomas Viking Christiansson", email = "thomas.christiansson@epfl.ch" },
  { name = "Igor Gonteri", email = "igor.gonteri@epfl.ch" },
  { name = "Arthur Humery", email = "arthur.humery@epfl.ch" }
]
dependencies = [
  "rdkit",
  "pandas",
  "matplotlib",
  "bokeh",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ThomasCsson/ppchem-project-Christiansson-Gonteri-Humery.git"