[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MASSIVEChem"
version = "3.1"
description = "MASSIVEChem, which stands for "Mass Analytical Spectrometry System for Investigation and Visual Extrapolation in Chemistry", is a pip-installable package developped at EPFL in 2024 focused on, as its name would suggest, analytical chemistry.
The aim of this package is to provide the user functions in order to simulate the mass spectrum of a molecule and to display this spectrum on a graph. The package also provides other features that can facilitate the chemical analysis of a molecule such as a functional group finder and an unsaturation calculator."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "Mass spectroscopy",
  "unsaturation",
  "functional group",
  "spectroscopy",
  "spectrometry",
  "chemistry",
  "cheminformatics",
  "chemical-engineering",
  "chemistry-lab",
  "chemical-property-prediction"
 ]
authors = [
  { name = "Thomas Viking Christiansson", email = "thomas.christiansson@epfl.ch" },
  { name = "Igor Gonteri", email = "igor.gonteri@epfl.ch" },
  { name = "Arthur Humery", email = "arthur.humery@epfl.ch" }
]
dependencies = [
  "rdkit",
  "pandas",
  "matplotlib",
  "bokeh",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ThomasCsson/MASSIVEChem.git"
GitHub_Thomas = "https://github.com/ThomasCsson"
GitHub_Igor = "https://github.com/igorgonteri"
GitHub_Arthur = "https://github.com/Arthurhmy"
